--- a/gaming-app/src/CSS/gsap.css
+++ b/gaming-app/src/CSS/gsap.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0 100px;
+    /* padding: 0 10px; */
     font-family: serif;
 }
 
