--- a/gaming-app/src/CSS/login.css
+++ b/gaming-app/src/CSS/login.css
@@ -2,6 +2,12 @@
     padding: 0px 0px;
     margin: 0px 0px;
 }
+#conatin{
+    width: 100%;
+     display: flex;
+     justify-content: space-evenly;
+    align-items: center; 
+}
 #logincontainer{
     
     background:linear-gradient(295deg, #3533CD, black);
@@ -37,4 +43,49 @@
 #continue:hover{
     cursor: pointer;
     transform: scale(1.1);
+}
+#details{
+    width: 35%;
+    height:100%;
+     color: white;
+      font-family: serif;
+       font-size: 20px;
+}
+#profilepic{
+    border: 5px solid yellow;
+    padding:9px 0px;
+     width: 35%;
+     border-radius:10px;
+     background-color:#283593;
+}
+
+@media screen and  (max-width: 1224px){
+    #conatin{
+        width: 100%;
+         display: flex;
+         flex-direction: column;
+         justify-content: space-evenly;
+        align-items: center; 
+    }
+    #details{
+        width: 95%;
+      
+    }
+    #profilepic{
+        border: 5px solid yellow;
+        padding:9px 0px;
+         width: 90%;
+         border-radius:10px;
+         background-color:#283593;
+    }
+    #continue{
+        width:50%;
+        font-size:26px;
+        border-radius:10px;
+        border: 4px solid yellow;
+        color:yellow;
+        padding:10px 0px;
+        background-color:#1A237E;
+        font-family: serif;
+    }
 }
