--- a/gaming-app/src/CSS/login.css
+++ b/gaming-app/src/CSS/login.css
@@ -3,12 +3,15 @@
     margin: 0px 0px;
 }
 #conatin{
+   
     width: 100%;
      display: flex;
      justify-content: space-evenly;
     align-items: center; 
+    margin-top: 3%;
 }
 #logincontainer{
+    height: 100vh;
     background:linear-gradient(295deg, #3533CD, black);
     display: flex;
     justify-content: center;
@@ -18,7 +21,7 @@
     color: black;
     text-align: center;
     border: 2px dashed brown;
-    padding:3px 0px;
+    padding:1% 0%;
     border-radius:10px;
     
 }
@@ -35,7 +38,7 @@
     border-radius:10px;
     border: 4px solid yellow;
     color:yellow;
-    padding:10px 0px;
+    padding:0.5% 0%;
     background-color:#1A237E;
     font-family: serif;
 }
@@ -60,9 +63,20 @@
 .select{
     font-size: 25px;
 }
+.paragra{
+    font-size: 20px;
+}
 
 @media screen and  (max-width: 1224px){
+    #logincontainer{
+        height: auto;
+        background:linear-gradient(295deg, #3533CD, black);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
     #conatin{
+        
         width: 100%;
          display: flex;
          flex-direction: column;
