--- a/gaming-app/src/CSS/welcometwo.css
+++ b/gaming-app/src/CSS/welcometwo.css
@@ -5,3 +5,14 @@
     justify-content: center;
     background:linear-gradient(295deg, #3533CD, black 60%)
 }
+#start{
+   color:#6098e2;
+   font-size:27px;
+}
+
+@media screen and  (max-width: 700px){
+    #start{
+        color:#6098e2;
+        font-size:15px;
+     } 
+}
